// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swagger Swagger UI Hosting Config Should throw error when provided invalid value 1`] = `
Array [
  Array [
    [Error: Not supported value lorem for environment variable PLUM_ENABLE_SWAGGER],
  ],
]
`;

exports[`Swagger Swagger UI Hosting Grouping Should host groups properly 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. UsersController.get() -> GET /api/v1/users",
  ],
  Array [],
  Array [
    "1. UsersController.get() -> GET /api/v2/users",
  ],
  Array [],
  Array [
    "1. SwaggerFacility -> Public GET /swagger/v1",
  ],
  Array [
    "2. SwaggerFacility -> Public GET /swagger/v2",
  ],
  Array [],
]
`;

exports[`Swagger Swagger UI Hosting Should able to render string option 1`] = `
"<!-- HTML for static distribution bundle build -->
<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\">
    <title>Swagger UI</title>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"./swagger-ui.css\\" >
    <link rel=\\"icon\\" type=\\"image/png\\" href=\\"./favicon-32x32.png\\" sizes=\\"32x32\\" />
    <link rel=\\"icon\\" type=\\"image/png\\" href=\\"./favicon-16x16.png\\" sizes=\\"16x16\\" />
    <style>
      html
      {
        box-sizing: border-box;
        overflow: -moz-scrollbars-vertical;
        overflow-y: scroll;
      }

      *,
      *:before,
      *:after
      {
        box-sizing: inherit;
      }

      body
      {
        margin:0;
        background: #fafafa;
      }
      .swagger-ui .opblock .opblock-summary-description {
        text-align: right;
      }
    </style>
  </head>

  <body>
    <div id=\\"swagger-ui\\"></div>

    <script src=\\"./swagger-ui-bundle.js\\"> </script>
    <script src=\\"./swagger-ui-standalone-preset.js\\"> </script>
    <script>
    window.onload = function() {
      // Begin Swagger UI call region
      const ui = SwaggerUIBundle({
        url: \\"swagger.json\\",
        dom_id: '#swagger-ui',
        presets: [
          SwaggerUIBundle.presets.apis,
          SwaggerUIStandalonePreset
        ],
        plugins: [
          SwaggerUIBundle.plugins.DownloadUrl
        ],
        layout: \\"StandaloneLayout\\",
        deepLinking: true,
                defaultModelsExpandDepth: -1,
                filter: \\"lorem ipsum\\",
              })
      // End Swagger UI call region
      window.ui = ui
    }
  </script>
  </body>
</html>
"
`;

exports[`Swagger Swagger UI Hosting Should render swagger ui with default option 1`] = `
"<!-- HTML for static distribution bundle build -->
<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\">
    <title>Swagger UI</title>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"./swagger-ui.css\\" >
    <link rel=\\"icon\\" type=\\"image/png\\" href=\\"./favicon-32x32.png\\" sizes=\\"32x32\\" />
    <link rel=\\"icon\\" type=\\"image/png\\" href=\\"./favicon-16x16.png\\" sizes=\\"16x16\\" />
    <style>
      html
      {
        box-sizing: border-box;
        overflow: -moz-scrollbars-vertical;
        overflow-y: scroll;
      }

      *,
      *:before,
      *:after
      {
        box-sizing: inherit;
      }

      body
      {
        margin:0;
        background: #fafafa;
      }
      .swagger-ui .opblock .opblock-summary-description {
        text-align: right;
      }
    </style>
  </head>

  <body>
    <div id=\\"swagger-ui\\"></div>

    <script src=\\"./swagger-ui-bundle.js\\"> </script>
    <script src=\\"./swagger-ui-standalone-preset.js\\"> </script>
    <script>
    window.onload = function() {
      // Begin Swagger UI call region
      const ui = SwaggerUIBundle({
        url: \\"swagger.json\\",
        dom_id: '#swagger-ui',
        presets: [
          SwaggerUIBundle.presets.apis,
          SwaggerUIStandalonePreset
        ],
        plugins: [
          SwaggerUIBundle.plugins.DownloadUrl
        ],
        layout: \\"StandaloneLayout\\",
        deepLinking: true,
                defaultModelsExpandDepth: -1,
              })
      // End Swagger UI call region
      window.ui = ui
    }
  </script>
  </body>
</html>
"
`;
